Added full project

--- a/Site web/template/Wappers.html
+++ b/Site web/template/Wappers.html
@@ -1,20 +1,27 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Spotify Double</title>
-    <link rel="stylesheet" href="../assets/style.css">
+    <link rel="stylesheet" href="../assets/mainP.css">
 </head>
+
 <body>
-    <a href="Damso.html">
-        <img src="../images/Damso.jpg" alt="Damso">
-    </a>
-    
-    <a href="Laylow.html">
-        <img src="" alt="Laylow">
-    </a>
-    
-    
+    <div class="landing-container">
+        <div class="artist-gallery">
+            <a href="/damso" class="artist-card">
+                <img src="../images/Damso.jpg" alt="Damso">
+                <span>Damso</span>
+            </a>
+
+            <a href="/laylow" class="artist-card">
+                <img src="../images/Laylow.jpg" alt="Laylow">
+                <span>Laylow</span>
+            </a>
+        </div>
+    </div>
 </body>
+
 </html>
